[gd_scene load_steps=4 format=3 uid="uid://cvwytxa8gkpkk"]

[ext_resource type="Texture2D" uid="uid://djgdjb1wtam54" path="res://assets/images/Fondo_Menu.png" id="1_f1h5m"]
[ext_resource type="Script" uid="uid://c701cs4fkvvqd" path="res://Scripts/register_screen.gd" id="1_y843n"]
[ext_resource type="Texture2D" uid="uid://48b4m4eytwh3" path="res://assets/images/TituloJuego.png" id="2_y843n"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y843n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_f1h5m")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -43.0
offset_right = 212.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -139.5
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "CREAR PERFIL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Nombre:"

[node name="FullNameEdit" type="LineEdit" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Usuario:"

[node name="UsernameEdit" type="LineEdit" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Contraseña:"

[node name="PasswordEdit" type="LineEdit" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
secret = true

[node name="Label5" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Confirmar contraseña:"

[node name="ConfirmPasswordEdit" type="LineEdit" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
secret = true

[node name="ErrorLabel" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2

[node name="BtnCreate" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Crear Perfil"

[node name="BtnBack" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Volver"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = -49.0
offset_right = 892.0
offset_bottom = 323.0
texture = ExtResource("2_y843n")

[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/BtnCreate" to="." method="_on_BtnCreate_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/BtnBack" to="." method="_on_BtnBack_pressed"]
